deleted workbench